# AdvancedCV

./: README.md
FinalProject/: CMakeLists.txt  NEW_CAMERA_camera_calibration.yml  OLD_CAMERA_camera_calibration.yml  Player.cpp  Player.h  camera_calibration.yml  extraFunctions.cpp  extraFunctions.h  main.cpp
FinalProject/assets/filled_board_no_arms_WEIGHTS_testing/: monopoly.names
FinalProject/assets/test/labels/: frame_33_jpg.rf.8e9732aecaf66390754cb51ea68c7eb2.txt  frame_36_jpg.rf.6ee0ef17f0fb739635e3fc24134e8127.txt
FinalProject/onnxenv/: pyvenv.cfg
FinalProject/onnxenv/Scripts/: activate  activate.bat
FinalProject/onnxenv311/: pyvenv.cfg
FinalProject/onnxenv311/Scripts/: activate  activate.bat
HW2/: CMakeLists.txt  README.md  main.cpp
HW3/: CMakeLists.txt  main.cpp
HW4/: CMakeLists.txt  main.cpp
HW5/: CMakeLists.txt  main.cpp
YOLO_test_images/Filled_board_arms/: README.txt
YOLO_test_images/Filled_board_no_hands/: README.txt
YOLO_test_images/Light_board_arms/: README.txt
YOLO_test_images/Light_board_no_arms/: README.txt
YOLO_test_images/Medium_board_arms/: README.txt
YOLO_test_images/Medium_board_no_arms/: README.txt
YOLO_test_images/empty_board/: README.txt
